--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.avankziar</groupId>
 	<artifactId>paintthemwhite</artifactId>
-	<version>8-5-0</version>
+	<version>8-6-0</version>
 	<name>PaintThemWhite</name>
 	<url>https://github.com/${repository-owner}/${repository-name}.git</url>
     <scm>
@@ -59,6 +59,10 @@
 				       <pattern>de.tr7zw.changeme.nbtapi</pattern>
 				       <shadedPattern>main.java.nbtapi</shadedPattern>
 				     </relocation>
+				     <relocation>
+						<pattern>dev.dejvokep.boostedyaml</pattern>
+						<shadedPattern>interfacehub.dev.dejvokep.boostedyaml</shadedPattern>
+					</relocation>
 				   </relocations>
       			</configuration>
       				<executions>
@@ -75,7 +79,7 @@
 			    <artifactId>maven-jar-plugin</artifactId>
 			    <version>2.4</version>
 			    <configuration>
-			      <outputDirectory>F:\Datein\Dev\Dev Server 1.21.4</outputDirectory>
+			      <outputDirectory>F:\Datein\Dev\Dev Server 1.21.8</outputDirectory>
 			      <finalName>${project.artifactId}-${project.version}</finalName>
 			    </configuration>
 			    <executions>
@@ -133,7 +137,7 @@
 		<dependency>
  			<groupId>dev.dejvokep</groupId>
   			<artifactId>boosted-yaml</artifactId>
-  			<version>1.3.5</version>
+  			<version>1.3.7</version>
   			<scope>provided</scope>
 		</dependency>
 	</dependencies>
